# Project-Computational-Science

./: .gitignore  Code_review.txt  README.md  energyTesting.cpp  energyTesting.ipynb  energy_output_verlet.csv  hypothesisTesting.cpp  hypothesisTesting.ipynb  innerOuterCSVgenerating.cpp  keplerToCartesian.ipynb  keplerToCartesian.py  planetVisualisation.ipynb  processCentaurs.ipynb  readme.docx  simple_solar_system.py  solar_system.7z  solar_system.cpp  solar_system.hpp  solar_system_3D.py  solar_system_Euler_David.cpp  solar_system_Thijs.cpp  solar_system_Verlet.cpp  solar_system_animate.cpp  solar_system_astronomical.cpp  solar_system_hpp.cpp  system_energy.ipynb
Archive/: energyTesting.ipynb  simple_solar_system.py  solar_system_3D.py  solar_system_Euler.cpp  solar_system_Euler_David.cpp
Archive/rebound_project/data/: planetData.csv
Archive/solar_system_project_Joel/: solar_system_output.csv  solar_system_project_Joel.cpp  solar_system_project_Joel.sln  solar_system_project_Joel.vcxproj  solar_system_project_Joel.vcxproj.filters
CentaurGeneration/: processCentaurs.ipynb  sbdb_query_results.csv
Data/: Centaurs.csv  CentaursCartesian.csv  celestialData.csv  celestialDataReduced.csv  centaurData.csv  centaurEnergy.csv  centaurEnergy01.csv  centaurEnergy1.csv  centaurEnergy10.csv  centaurEnergy100.csv  centaurEnergy120.csv  centaurEnergy150.csv  centaurEnergy200.csv  centaurEnergy300.csv  centaurEnergy50.csv  planetData.csv  systemEnergy.csv  systemEnergyVerlet.csv  test500.csv  totalEnergy1.csv
Data/energyTesting/: centaurEnergy100dt.csv  centaurEnergy10dt.csv
Data/energyTesting/backup/: centaurEnergy10dt.csv
Data/hypothesis/steps1e6dt10/: inner0.00.csv  inner0.25.csv  inner0.50.csv  inner0.75.csv  inner1.00.csv  inner1.25.csv  inner1.50.csv  inner1.75.csv  inner2.00.csv  outer0.00.csv  outer0.25.csv  outer0.50.csv  outer0.75.csv  outer1.00.csv  outer1.25.csv  outer1.50.csv  outer1.75.csv  outer2.00.csv
Data/planetPositions/: Earth.csv  Jupiter.csv  Mars.csv  Mercury.csv  Neptune.csv  Saturn.csv  Uranus.csv  Venus.csv
Data/vtkCentaurClasses/: classes0.25.csv  classes1.00.csv  classes1.75.csv  classes_nobias.csv
Include/: util.hpp
rebound_project/: Makefile
rebound_project/src/: systemRebound.c
solar_system_project_Joel/: solar_system_project_Joel.cpp
vtkGenerating/: CMakeLists.txt  solar_system_animateVTK.cpp
vtkProject/: CMakeLists.txt  solar_system_animateVTK.cpp
